# grafecs

./: .gitignore  Cargo.toml  README.md  build.rs  makefile
data/: script.dw
src/: draw.rs  dwscript.l  dwscript.y  engine.rs  fatrix.rs  gmath.rs  lib.rs  main.rs  parser.rs
src/parser/: display.c  display.h  draw.c  draw.h  gmath.c  gmath.h  main.c  makefile  matrix.c  matrix.h  mdl.y  mdl_intermediate_language.spec  ml6.h  my_main.c  old_parser.c  parser.h  print_pcode.c  stack.c  symtab.h
src/screen/: color.rs  mod.rs  screen.rs
src/space/: light.rs  mod.rs  modtrix.rs  space.rs
